Started on the Managers

--- a/Assets/Scripts/UI/UI.asmdef
+++ b/Assets/Scripts/UI/UI.asmdef
@@ -2,7 +2,8 @@
     "name": "UI",
     "rootNamespace": "",
     "references": [
-        "GUID:dddab90fde9e83a43b0ad4bc8464b672"
+        "GUID:dddab90fde9e83a43b0ad4bc8464b672",
+        "GUID:dea7fd9c669f244439ffd85080b3b091"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
